# allocate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  asgi.py  pyproject.toml  requirements.txt  ruff.toml
backend/api/: __init__.py  config.py  database.py  dependencies.py  middleware.py
backend/api/ai/: dependencies.py
backend/api/ai/connectors/: exa_connector.py  openrouter_connector.py
backend/api/ai/controllers/: ai_controller.py
backend/api/ai/errors/: chat_analysis_error.py
backend/api/ai/services/: chat_service.py  prompt_service.py  scheduling_service.py  search_service.py  tools_service.py  transcription_service.py
backend/api/ai/use_cases/: analyse_audio_use_case.py  analyse_chat_use_case.py  apply_recommendations_use_case.py  transcribe_audio_use_case.py
backend/api/ai/utils/: event_utils.py
backend/api/audio/: dependencies.py
backend/api/audio/controllers/: audio_controller.py
backend/api/audio/errors/: audio_analysis_error.py  audio_processing_error.py  (+2 more)
backend/api/events/: dependencies.py
backend/api/integrations/: dependencies.py
backend/api/mcp/: server.py
backend/api/middleware/: dependencies.py
backend/api/openai/: openapi_wrapper.py
backend/api/prompts/: base.prompt  chat.prompt
backend/api/services/: email_service.py
backend/api/users/: dependencies.py  validators.py
backend/api/utils/: openapi_wrapper.py
backend/migrations/: env.py
backend/migrations/versions/: 71a6360c0a2a_add_rrule_and_exdate_to_events.py
caddy/: Caddyfile
(+181 files in other folders)
